# trichess

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.md  README.md  aggregate_score.py  crontab  docker-compose.yml  gunicorn_config.py  initdb.py  pyproject.toml  recalculate_score.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  run.py  start.sh  token_fetch.html  token_fetch_local.html
.github/workflows/: docker-image.yml
engine/: __init__.py  board.py  gameapi.py  pieces.py  player.py  ui.py
html/: tricks.html
src/trichess/: __init__.py  __main__.py  engine.py  pieces.py  ui.py
tests/: conftest.py  test_board.py  test_gameapi.py  test_pieces.py  test_player.py  test_trichess.py
trichess/: __init__.py
webapp/: __init__.py  api.py  configuration.py  email.py  forms.py  main.py  models.py  token.py  views.py
webapp/static/: board.css  board.js  board_orig.js  common.css  filio.css  filio.js  game.css  game.js  ondro.css  ondro.js  style.css
webapp/static/pieces/: chubby.yaml  default.yaml  school.yaml
webapp/static/themes/: balckandwhite.yaml  blackandwhite.yaml  colorblind.yaml  contrast.yaml  default.yaml  night.yaml  sandy.yaml
webapp/templates/: admin-games.html  admin-users.html  admin.html  archive.html  available.html  base.html  baselx.html  board_filio.html  board_ondro.html  created.html  forgot_password.html  games.html  index.html  login.html  new.html  play.html  play_orig.html  playlx.html  profile.html  rating.html  register.html  reset_password.html  rules.html
