[project]
name = "trichess"
version = "0.2.1"
description = "A web application for 3-player chess on hexagonal board"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "email-validator>=2.3.0",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.4",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "wtforms-sqlalchemy>=0.4.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
